--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Body mass index - BMI - IMC</title>
     <meta charset="utf-8">
-    <link href="http://s3.amazonaws.com/codecademy-content/projects/bootstrap.min.css" rel="stylesheet" />
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet" />
     <link href="css/main.css" rel="stylesheet" />
 
     
